Move developer instructions out of the README
The Plugin Hub shows the README to people installing the plugin, and the
"Running it" section was written for people building it - Gradle, the shadow
jar, and the Jagex credentials workaround in particular are not things an end
user should be pointed at. Requested by a hub maintainer in review.

It all lives in CONTRIBUTING.md now, together with the project layout and a note
on tests and publishing.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>